# AlphaForge

./: .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/showcase_compare_report/: metadata.json  report.txt  results.csv
artifacts/showcase_runs/: runs.csv
configs/: alpha_vantage_us_equities_example.toml  market_cap_grouped_diagnostics_example.toml  mean_reversion_example.toml  momentum_example.toml  sample_pipeline.toml  stage1_universe_example.toml  stage2_execution_example.toml  stage3_benchmark_example.toml  stage4_flagship_example.toml  trend_example.toml
tests/: test_backtest_engine.py  test_backtest_execution.py  test_backtest_ledger.py  test_cli.py  test_cli_artifacts.py  test_cli_charts.py  test_cli_comparison.py  test_cli_pipeline.py  test_cli_report_context.py  test_cli_report_package.py  test_cli_reports.py  test_cli_research_metadata.py  test_cli_validation_report.py  test_cli_walk_forward.py  test_cli_workflows.py  test_common_errors.py  test_common_validation.py  test_example_strategies.py  test_factor_definitions.py  test_factor_diagnostics.py  test_feature_cache.py  test_feature_metadata.py  test_fundamental_metric_selection.py  test_market_data.py  test_parameter_sweep.py  test_performance_analytics.py  test_portfolio_weights.py  test_price_signals.py  test_project_metadata.py  test_ratio_features.py  test_reference_field_selection.py  test_research_dataset.py  test_risk_metrics.py  test_signal_metadata.py  test_signal_transform_definitions.py  test_visualization.py  test_walk_forward.py
(+91 files in other folders)
