[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge"
version = "0.1.0"
description = "A modular quant research and development workbench."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=10.0",
    "tomli>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
alphaforge = "alphaforge.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
